# flowchart-studio

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CHANGELOG.md  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  フローチャートを開く.bat
.husky/: pre-commit  pre-push
python/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  railway.toml
python/packaging/: excel_converter.spec  excel_converter_entry.py  version_info.txt
python/scripts/: build_a0001_master.py  build_a0001_scratch.py  build_and_verify_converter.py  build_demo_devices.py  build_fixture.py  build_template.py  build_test001.py  converter_exe_util.py  inspect_device.py  normalize_device.py  release_converter.py  scaffold_device.py  smoke_converter_exe.py
python/src/excel_converter_gui/: __init__.py  __main__.py  app.py  cli.py  convert.py  runner.py
python/src/excel_normalize/: a0001_v03.py  cli.py  constants.py  device_workbook.py  devices_root.py  inspect.py  kosei.py  labels.py  master_sheets.py  normalize.py  tables.py  validate.py  workbook_builder.py
python/src/normalize_api/: __init__.py  config.py  dependencies.py  main.py
python/src/normalize_api/routers/: __init__.py  normalize.py
python/src/normalize_api/schemas/: __init__.py  normalize.py
python/src/normalize_api/services/: __init__.py  normalize.py  upload_validation.py
python/testdata/devices/: README.md
python/testdata/devices/A0001_塗布装置/: README.md
python/testdata/fixtures/: _smoke-test.json  _smoke2.json
python/tests/: test_api_normalize.py  test_converter_cli.py  test_converter_gui.py  test_inspect.py  test_labels.py  test_normalize.py  test_release_converter.py  test_schema_consistency.py  test_tables.py
tools/excel_normalize/: .gitignore  README.md  pyproject.toml
tools/excel_normalize/excel_normalize/: __init__.py  a0001_v03.py  constants.py  device_paths.py  device_workbook.py  kosei.py  normalize.py  tables.py  validate.py  workbook_builder.py
tools/excel_normalize/scripts/: build_a0001_master.py  build_a0001_scratch.py  build_demo_devices.py  build_fixture.py  build_test001.py  normalize_device.py  scaffold_device.py
tools/excel_normalize/testdata/: import-z00001.json
tools/excel_normalize/tests/: test_device_paths.py  test_normalize.py
(+392 files in other folders)
