[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["excel_normalize*", "normalize_api*", "excel_converter_gui*"]

[project]
name = "excel-normalize"
version = "0.1.0"
description = "入力用 Excel → import.json（装置階層 + フロー表）"
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1",
]

[project.optional-dependencies]
api = [
  "fastapi[standard]>=0.115",
  "pydantic-settings>=2.0",
  "python-multipart>=0.0.9",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.15",
  "pre-commit>=4.0",
  "mypy>=1.0",
  "fastapi[standard]>=0.115",
  "pydantic-settings>=2.0",
  "python-multipart>=0.0.9",
  "pyinstaller>=6.0",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # 日本語エラーメッセージは行長超過を許容

[project.scripts]
excel-normalize = "excel_normalize.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
packages = ["excel_normalize", "normalize_api"]
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["openpyxl", "openpyxl.*"]
ignore_missing_imports = true
