[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["excel_normalize*"]

[project]
name = "excel-normalize"
version = "0.1.0"
description = "入力用 Excel → import.json（装置階層 + フロー表）"
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.15",
  "pre-commit>=4.0",
  "mypy>=1.0",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # 日本語エラーメッセージは行長超過を許容

[project.scripts]
excel-normalize = "excel_normalize.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
packages = ["excel_normalize"]
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["openpyxl", "openpyxl.*"]
ignore_missing_imports = true
